# OmeGroup

./: README.md  deploy.sh  vercel.json
backend/: .gitignore  Cargo.toml
backend/src/: handlers.rs  main.rs
infra/: .gitignore  .terraform.lock.hcl  auth.tf  compute.tf  database.tf  main.tf  terraform.tfvars  variables.tf
ui/: .gitignore  index.html  package-lock.json  package.json
ui/src/: App.tsx  ChatApp.tsx  index.css  main.tsx
ui/src/components/: RotateOverlay.tsx  UserProfile.tsx  UsernameGate.tsx  VideoGrid.tsx
ui/src/components/shared/: Logo.tsx
ui/src/hooks/: useLayoutModes.ts  useMatchmaker.ts
