[dependencies]
lambda_http = { version = "0.9", default-features = false, features = ["apigw_websockets"] }
tokio = { version = "1", features = ["macros", "full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-apigatewaymanagementapi = "1.15"
aws-sdk-ivsrealtime = "1.15"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
aws_lambda_events = "0.14" # Needed for the Authorizer Event types