[package]
name = "omegroup-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_http = "0.8"
lambda_runtime = "0.8"
aws-config = "1.0"
aws-sdk-ivsrealtime = "1.0"
aws-sdk-apigatewaymanagementapi = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.0"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "authorizer"
path = "src/bin/authorizer.rs"

[[bin]]
name = "cron"
path = "src/bin/cron.rs"