[package]
name = "omegroup-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# The all-important WebSocket flag
lambda_http = { version = "0.8", features = ["apigw_websockets"] }
lambda_runtime = "0.8"
aws_lambda_events = { version = "0.11", default-features = false, features = ["apigw"] }

# AWS SDKs
aws-config = { version = "1.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-sdk-ivsrealtime = { version = "1.0", default-features = false, features = ["rt-tokio", "rustls"] }
aws-sdk-apigatewaymanagement = { version = "1.0", default-features = false, features = ["rt-tokio", "rustls"] }

# Rest of the backend logic
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.0"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "authorizer"
path = "src/bin/authorizer.rs"

[[bin]]
name = "cron"
path = "src/bin/cron.rs"